@@ -154,7 +154,8 @@ product_button_tooltip=__1__ [font=heading-2][color=#42ff4b]__2__[/color][/font]
 product_produced=\n[font=default-bold][color=orange]Produced (__1__)    [/color][/font]
 product_consumed=[font=default-bold][color=cyan]Consumed (__1__)[/color][/font]
 product_all_consumed=[font=default-bold][color=cyan]All consumed[/color][/font]
-machine-tooltip=[font=heading-2][color=#42ff4b]__1__[/color][/font]\n__CONTROL_LEFT_CLICK__ open detail dialog\n__CONTROL_KEY_CTRL__ __CONTROL_LEFT_CLICK__ create blueprint for machine layout\n __CONTROL_KEY_SHIFT__ __CONTROL_LEFT_CLICK__ Craft machine.\n  __CONTROL_RIGHT_CLICK__ Highlight machines on origin surface
+machine-tooltip=[font=heading-2][color=#42ff4b]__1__[/color][/font]\n__CONTROL_LEFT_CLICK__ open detail dialog\n__CONTROL_KEY_CTRL__ __CONTROL_LEFT_CLICK__ create blueprint for machine layout\n __CONTROL_KEY_SHIFT__ __CONTROL_LEFT_CLICK__ Craft machine.\n  __CONTROL_RIGHT_CLICK__ Highlight machines on origin surface \n[img=factory_graph_sep]\n[font=default-bold][color=cyan]Ingredients[/color][/font]__2__
+machine_product_tooltip=\n     __1__ x __3__ [color=cyan] __2__ [/color]
 mini_tooltip=Minimize product panel
 error_title=[color=cyan][font=heading-2]Faulting recipes[/font][/color]
 error_recipe_lanel=[color=red][font=default-bold]  __1__[/font][/color]
@@ -172,6 +173,7 @@ build-inventory-tooltip=Quantity in player inventory
 build-logistic=Logistic
 build-logistic-tooltip=Quantity in logistic network
 build-button-tooltip= __CONTROL_LEFT_CLICK__ craft 1 machine\n __CONTROL_KEY_CTRL__ __CONTROL_LEFT_CLICK__ craft all missing machines \n __CONTROL_KEY_SHIFT__ __CONTROL_LEFT_CLICK__ request all missing machines from logistic network
+build-button-tooltip_hover= __CONTROL_LEFT_CLICK__ craft 1 machine\n __CONTROL_KEY_CTRL__ __CONTROL_LEFT_CLICK__ craft all missing machines \n __CONTROL_KEY_SHIFT__ __CONTROL_LEFT_CLICK__ request all missing machines from logistic network \n[img=factory_graph_sep]\n[font=default-bold][color=cyan]Ingredients[/color][/font]__1__
 machine_report=Found __1__ machines
 
 [factory_graph-setting-panel]
@@ -181,6 +183,7 @@ show_hidden=Show hidden recipes
 only-researched=Show only researched recipe
 layout-on-selection=Automatic layout on single selection
 layout_on_selection_tooltip=Automatically recompute a new layout when a new recipe is selected
+use_machine_in_inventory=Preferred machines in inventory
 preferred_machines=Preferred machines
 preferred_modules=Preferred modules
 preferred_beacon=Preferred beacon
